--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <img src="imagem.png" alt="Imagem Centralizada">
+    <img src="imagem.jpg" alt="Imagem Centralizada">
 </body>
 </html>
